Removed old background image

--- a/iOS/index.html
+++ b/iOS/index.html
@@ -44,6 +44,7 @@
 									<a href="images/fulls/PokeViewer-Detail_iphone.png" class="image fit thumb"><img src="images/thumbs/PokeViewer-Detail_iphone.png" alt="" /></a>
 									<h2>PokeViewer</h2>
 									<h3>An iOS application which acts like a Pokedex where you can view Pokemon sprites, abilities and stats.</h3>
+									<h3>Architecture : MVC-N</h3>
 									<h3>Technologies and Frameworks Used : </h3>
 									<ul class="col-12 col-12-xsmall work-item">
 										<li>Networking</li>
