Removed image titles

--- a/iOS/index.html
+++ b/iOS/index.html
@@ -41,7 +41,7 @@
 						<h1>Projects</h1>
 						<div class="row">
 							<article class="col-12 col-12-xsmall work-item">
-									<a href="images/fulls/PokeViewer-Detail_iphone.png" class="image fit thumb"><img src="images/thumbs/PokeViewer-Detail_iphone.png" alt="" /></a>
+									<a href="images/fulls/PokeViewer-Detail_iphone.png" class="image fit thumb"><img src="images/thumbs/PokeViewer-Detail_iphone.png" alt="" name="test"/></a>
 									<h2>PokeViewer</h2>
 									<h3>An iOS application which acts like a Pokedex where you can view Pokemon sprites, abilities and stats.</h3>
 									<h3>Architecture : MVC-N</h3>
