Changed size of personal information

--- a/iOS/index.html
+++ b/iOS/index.html
@@ -17,10 +17,10 @@
 			<header id="header">
 				<div class="inner">
 					<a href="https://www.linkedin.com/in/rohitlunavara/" class="image avatar"><img src="images/avatar.jpeg" alt="" /></a>
-					<h1><strong>Rohit Lunavara</strong></h1>
-					<h1><strong>Graduate Student</strong></h1>
-					<h1><strong>Computer Science</strong></h1>
-					<h1><strong>Columbia University</strong></h1>
+					<h2><strong>Rohit Lunavara</strong></h2>
+					<h1>Graduate Student</h1>
+					<h1>Computer Science</h1>
+					<h1>Columbia University</h1>
 				</div>
 			</header>
 
