Added Core Animation to Make-Pairs

--- a/iOS/index.html
+++ b/iOS/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="https://www.linkedin.com/in/rohitlunavara/" class="image avatar"><img src="images/avatar.jpeg" alt="" /></a>
-					<h1><strong>Rohit Lunavara</strong></h1>
+					<h1 style="font-weight: bold;"><strong>Rohit Lunavara</strong></h1>
 					<h1>Graduate Student</h1>
 					<h1>Computer Science</h1>
 					<h1>Columbia University</h1>
@@ -81,6 +81,7 @@
 									<li>Key-Value Observing</li>
 									<li>Grand Central Dispatch</li>
 									<li>Core Graphics</li>
+									<li>Core Animation</li>
 									<li>Custom UIButton Extensions</li>
 								</ul>
 								<ul class="actions">
