--- a/iOS/index.html
+++ b/iOS/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Rohit Lunavara iOS</title>
+		<title>Rohit Lunavara - iOS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
